# Open-Health-Exchange

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/workflows/: ci.yml  publish.yml
base/: admin.py  apps.py  backends.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_provider_credentials.py  0002_alter_provider_credentials_squashed_0006_merge_20250924_1242.py  0007_add_deeplink_urls.py
base/templates/base/: provider_link_error.html  provider_link_success.html
base/tests/: test_backends.py  test_signals.py  test_views.py
docs/: api-documentation.md  architecture.md  deployment-guide.md  examples.md  fhir-device-examples.md  fhir-mappings.md  logging.md  mobile-deeplinks.md  monitoring-operations-guide.md  providers-and-devices.md  webhooks.md
docs/fhir/examples/: blood_pressure_observation.json  complete_ecg_panel_example.json  comprehensive_health_data_bundle.json  ecg_observation.json  fitbit_sense_device.json  heart_rate_observation.json  rr_intervals_observation.json  spo2_observation.json  steps_observation.json  temperature_observation.json  weight_observation.json  withings_bpm_core_association.json  withings_bpm_core_device.json
ingestors/: api_clients.py  api_clients_original.py  apps.py  circuit_breaker.py  constants.py  device_manager.py  device_mapping_service.py  device_sync_service.py  error_handling.py  health_data_constants.py  health_data_manager.py  health_data_service.py  health_data_tasks.py  health_sync_strategies.py  provider_mappings.py  result_serialization.py  tasks.py  unified_health_data_manager.py  urls.py  views.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
metrics/: apps.py  collectors.py  logging.py  middleware.py  urls.py  views.py
open_health_exchange/: asgi.py  settings.py  urls.py  views.py  wsgi.py
publishers/: apps.py  urls.py
publishers/fhir/: __init__.py  association_publisher.py  client.py  device_publisher.py  health_data_publisher.py
templates/rest_framework/: api.html
tests/: __init__.py  test_api_clients.py  test_api_clients_fitbit_hrv.py  test_association_publisher.py  test_backends.py  test_base_fhir_transformer.py  test_circuit_breaker.py  test_constants.py  test_device_manager.py  test_device_mapping_service.py  test_device_publisher.py  test_device_sync_service.py  test_ecg_transformers.py  test_error_handling.py  test_fhir_client.py  test_fhir_transformers.py  test_health_data_manager.py  test_health_data_publisher.py  test_health_data_service.py  test_health_data_transformers.py  test_health_sync_strategies.py  test_metrics.py  test_metrics_logging.py  test_metrics_middleware.py  test_pipeline.py  test_provider_mappings.py  test_unified_health_data_manager.py  test_unified_webhook_handler.py  test_utils.py  test_views.py  test_webhook_processors.py  test_webhook_subscriptions.py  test_webhook_validators.py  test_webhook_views.py
transformers/: apps.py  base_fhir_transformer.py  ecg_transformers.py  fhir_transformers.py  health_data_transformers.py  identifier_utils.py  serializers.py  views.py
webhooks/: __init__.py  processors.py  subscriptions.py  unified_webhook_handler.py  urls.py  validators.py  views.py
(+2 files in other folders)
