[tool.black]
line-length = 140
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.isort]
profile = 'black'

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "open_health_exchange.settings"

[tool.poetry]
name = "Open Health Exchange"
version = "1.0.0"
description = "Python based middleware to sync mobile health data to FHIR-based EHRs"
authors = ["avi tech GmbH <engineering@avimedical.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
djangorestframework = "^3.16.0"
daphne = "^4.0.0"
huey = "^2.5.2"
redis = "^6.0"
fhirpy = "^2.0.15"
python-social-auth = {extras = ["django"], version = "^0.3.6"}
fitbit = "^0.3.1"
django = "^5.2.0"
dj-database-url = "^3.0"
psycopg2-binary = "^2.9.10"
mozilla-django-oidc = "^4.0.1"
django-oauth-toolkit = "^3.0.1"
django-redis = "^6.0.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.5"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0"
black = "^25.1.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
